--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,5 +31,9 @@
 </div><!-- .container -->
 </body>
 </html>
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'sdg-market/community'
+  };
 </script>
 <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
